.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Repository__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Branches_To_Deploy__c</fullName>
        <label>Branches To Deploy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__Build_and_Deploy_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Build and Deploy Organization</label>
        <referenceTo>Flosum__Organisation__c</referenceTo>
        <relationshipLabel>Repositories</relationshipLabel>
        <relationshipName>Repositories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Build_and_Deploy_Organizations__c</fullName>
        <description>for pipeline deployment</description>
        <label>Build and Deploy Organizations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__Deployment_Mode__c</fullName>
        <label>CI Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VALIDATE</fullName>
                </value>
                <value>
                    <fullName>DEPLOY</fullName>
                    <default>true</default>
                    <label>DEPLOY</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Deployment_Style__c</fullName>
        <label>CI Deployment Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>STOP ON FAILURE</fullName>
                    <default>true</default>
                    <label>STOP ON FAILURE</label>
                </value>
                <value>
                    <fullName>CONTINUE ON FAILURE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Is_Build_For_Branch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Build For Branch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__Is_Build_For_Repository__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Build For Repository</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__Is_Default_Repository__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default Repository</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__Last_Commit__c</fullName>
        <label>Last Commit</label>
        <length>82</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Pipeline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pipeline</label>
        <referenceTo>Flosum__Pipeline__c</referenceTo>
        <relationshipLabel>Repositories</relationshipLabel>
        <relationshipName>Repositories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Run_Tests_on_Deployment__c</fullName>
        <label>Run Tests on Deployment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Specified_Tests__c</fullName>
        <label>Specified Tests</label>
        <type>TextArea</type>
    </fields>
    <label>Repository</label>
    <listViews>
        <fullName>Flosum__All</fullName>
        <columns>NAME</columns>
        <columns>Flosum__Is_Default_Repository__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Repository Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repositories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>